# kronical

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
benchmarks/compressor/: mouse_traj.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  interner.rs  lib.rs  lru.rs  paths.rs  threading.rs
crates/common/tests/: threading_tests.rs
crates/core/: Cargo.toml
crates/core/src/: compression.rs  events.rs  lib.rs  records.rs  snapshot.rs
crates/core/src/events/: adapter.rs  derive_hint.rs  derive_signal.rs  hints.rs  model.rs  signals.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs
crates/rpc/: Cargo.toml  build.rs
crates/storage/: Cargo.toml
crates/storage/src/: duckdb.rs  lib.rs  sqlite3.rs  system_metrics.rs
crates/storage/tests/: metrics_watch.rs
docs/: arch.md  demo-snapshot.md  todo.txt  troubleshooting.md
proto/: kroni.proto
scripts/: .gitignore  monitor_pid.sh  monitor_plot.py  pidio.c  plot_system_metrics.py  system_metrics_report.py  tracker.py
src/: aggregation_manager.rs  compact_sqlite_storage.rs  compression.rs  config.rs  coordinator.rs  daemon.rs  events.rs  focus_tracker.rs  kroni_api.rs  lib.rs  main.rs  monitor.rs  monitor_ui.rs  records.rs  simple_sqlite_storage.rs  socket_server.rs  state.rs  storage.rs  storage_backend.rs  util.rs
src/daemon/: api.rs  compression.rs  compressor.rs  coordinator.rs  duckdb_system_tracker.rs  event_adapter.rs  event_deriver.rs  event_model.rs  events.rs  focus_tracker.rs  http_admin.rs  http_server.rs  kroni_server.rs  pipeline.rs  records.rs  replay.rs  runtime.rs  snapshot.rs  socket_server.rs  system_tracker.rs  tracker.rs
src/daemon/events/: adapter.rs  derive_hint.rs  derive_signal.rs  deriver.rs  hints.rs  signals.rs
src/daemon/pipeline/: compression.rs  envelope.rs  hints.rs  ingest.rs  snapshot_stage.rs  storage.rs  types.rs
src/daemon/server/: grpc.rs  http.rs
src/daemon/tracker/: focus.rs  system.rs
src/monitor/: ui.rs
src/storage/: duckdb.rs  sqlite3.rs
src/util/: config.rs  interner.rs  logging.rs  lru.rs  maps.rs  paths.rs  run_id.rs
tests/: adapter_tests.rs  grpc_mapping_tests.rs  grpc_tracker_tests.rs  pipeline_tests.rs  sse_parsing_tests.rs  tracker_tests.rs
