[package]
name = "kronical"
version = "0.1.0"
edition = "2024"
description = "Activity tracking daemon with input and window monitoring"
authors = ["Jerry Yang <efjerryyang@outlook.com>"]
license = "MIT"

[[bin]]
name = "kronictl"
path = "src/bin/kronictl.rs"

[[bin]]
name = "kronid"
path = "src/bin/kronid.rs"


[dependencies]
#winshift = { path = "../vendor/winshift-rs" }
winshift = "0.0.5"
#uiohook-rs = { path = "../vendor/uiohook-rs" }
uiohook-rs = "0.2"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "2.0"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
    "chrono",
] }
tracing-appender = "0.2"
anyhow = "1.0"
dirs = "6.0"
sysinfo = "0.37"
libc = "0.2"
ringbuf = "0.4"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.37", features = ["bundled"] }
async-trait = "0.1"
once_cell = "1.19"
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"
config = "0.15"
duckdb = { version = "1.3.2", features = [
    "bundled",
    "chrono",
    "serde_json",
    "url",
    "r2d2",
    "uuid",
] }
kronical-common = { path = "crates/common" }

# gRPC API
tonic = { version = "0.14", features = ["transport"], optional = true }
tonic-prost = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }
tokio-stream = { version = "0.1", optional = true }
tower = { version = "0.5", optional = true }
axum = { version = "0.8", optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
futures-util = { version = "0.3", optional = true }
futures-core = { version = "0.3", optional = true }
hyper = { version = "1.0", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = [
    "tokio",
    "server",
    "http1",
], optional = true }

[dev-dependencies]
tempfile = "3.0"

[features]
kroni-api = [
    "tonic",
    "tonic-prost",
    "prost",
    "prost-types",
    "tokio-stream",
    "tower",
    "futures-core",
    "hyper-util",
]
http-admin = [
    "axum",
    "axum-server",
    "futures-util",
    "hyper",
    "hyper-util",
    "tokio-stream",
    "tower",
]
all = ["kroni-api", "http-admin"]
default = ["all"]

[lib]
name = "kronical"
path = "src/lib.rs"

[build-dependencies]
tonic-prost-build = { version = "0.14" }
bindgen = "0.72"

[workspace]
members = [
    "crates/common",
]
