[package]
name = "kronical"
version = "0.1.0"
edition = "2024"
description = "Activity tracking daemon with input and window monitoring"
authors = ["Jerry Yang <efjerryyang@outlook.com>"]
license = "MIT"

[[bin]]
name = "kronictl"
path = "src/bin/kronictl.rs"

[[bin]]
name = "kronid"
path = "src/bin/kronid.rs"


[dependencies]
winshift = { path = "../vendor/winshift-rs" }
# winshift = "0.0.5"
uiohook-rs = { path = "../vendor/uiohook-rs" }
# uiohook-rs = "0.2"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.5"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
base64 = "0.22"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
    "chrono",
    "tracing-log",
] }
tracing-appender = "0.2"
anyhow = "1.0"
dirs = "6.0"
sysinfo = "0.37"
libc = "0.2"
tokio = { version = "1.47", features = ["full"] }
crossbeam-channel = "0.5"
rusqlite = { version = "0.37", features = ["bundled"] }
async-trait = "0.1"
once_cell = "1.21"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.29"
unicode-width = "=0.2.0"
config = "0.15"
duckdb = { version = "1.4", features = [
    "bundled",
    "chrono",
    "serde_json",
    "url",
    "r2d2",
    "uuid",
] }
kronical-common = { path = "crates/common" }
kronical-core = { path = "crates/core" }
kronical-input = { path = "crates/input" }
kronical-rpc = { path = "crates/rpc" }
kronical-storage = { path = "crates/storage" }
hotpath = { version = "0.2", optional = true }

# gRPC + HTTP API
tonic = { version = "0.14", features = ["transport"] }
prost-types = { version = "0.14" }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5" }
axum = { version = "0.8" }
futures-util = { version = "0.3" }
futures-core = { version = "0.3" }
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = [
    "tokio",
    "server",
    "http1",
] }
shellexpand = "3.1"
indicatif = "0.18"
regex = "1.11"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tempfile = "3.23"

[lib]
name = "kronical"
path = "src/lib.rs"

[features]
default = []
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath", "hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-bytes-max = ["hotpath", "hotpath/hotpath-alloc-bytes-max"]
hotpath-alloc-count-total = ["hotpath", "hotpath/hotpath-alloc-count-total"]
hotpath-alloc-count-max = ["hotpath", "hotpath/hotpath-alloc-count-max"]

[build-dependencies]
bindgen = "0.72"

[workspace]
members = [
    "crates/common",
    "crates/core", "crates/input",
    "crates/rpc",
    "crates/storage",
]

[[bin]]
name = "bench-mouse-traj"
path = "benchmarks/compressor/mouse_traj.rs"
