[package]
name = "kronical-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "kronical_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
tokio = { version = "1.0", features = ["sync"] }
kronical-common = { path = "../common" }

