[package]
name = "kronical-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
duckdb = { version = "1.3.2", features = [
    "bundled",
    "chrono",
    "serde_json",
    "url",
    "r2d2",
    "uuid",
] }
kronical-core = { path = "../core" }
kronical-common = { path = "../common" }
log = "0.4"
once_cell = "1.19"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync"] }

[features]
default = []

[dev-dependencies]
tempfile = "3.0"
